rename repo name, add part 2 package

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Algorithms-part1</artifactId>
+    <artifactId>Algorithms-parts-1-2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
